--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,12 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+button:disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+  background-color: darkgray;
+}
+
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
