Temporarily close this MVP system

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+
+/* #root ほんまに必要なんかわからん */
+#root {
+  width: 100vw;
+}
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
